# blaser_experiment

./: .gitignore  README.md  blaser_2_test.ipynb  copilot_chat_log.md  install_fairseq2.py  pyproject.toml  requirements.txt
