[project]
name = "blaser-testing"
version = "0.1.0"
description = "Testing environment for BLASER 2.0 sentence similarity"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "sonar-space>=0.4.0",
    "ipywidgets>=8.0.0",
    "jupyter",
]

[build-system]
requires = ["uv>=0.1.15"]
build-backend = "uv"

[tool.uv]
python = "3.10"  # Target Python version
exclude = ["**/.git/**", "**/.venv/**", "**/__pycache__/**"]

[tool.uv.install]
no-cache = false

[tool.uv.dependencies]
fairseq2 = { version = ">= 0.4.5", index-url = "https://fair.pkg.atmeta.com/fairseq2/whl/pt{pt_version}/{cuda_version}" }
