[project]
name = "blaser-testing"
version = "0.1.0"
description = "Testing environment for BLASER 2.0 sentence similarity"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "sonar-space>=0.4.0",
    "ipywidgets>=8.0.0",
    "jupyter",
]

[build-system]
requires = ["setuptools>=61.0.0", "uv>=0.1.15"]
build-backend = "setuptools.build_meta"
